Fixed - Content spacing; - AOS missing offset after switch tabs;
Added
- JS function that swap IMG[SVG] to SVG files

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -27,7 +27,19 @@ header#agency_display p{
 .home_blog_post p{
   margin-bottom: 20px
 }
-
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0; overflow: hidden;
+  max-width: 100%; height: auto
+}
+.embed-container iframe, .embed-container object, .embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%
+}
 /*** Tablets and Desktops ***/
 @media screen and (min-width: 768px) {
   header#agency_display h3{
